fixing bug's on mobile screen

--- a/css/style.css
+++ b/css/style.css
@@ -208,12 +208,21 @@ body {
 
 @media (max-width: 425px) {
   .bg {
-    height: 150vmax;
+    height: 170vmax;
+  }
+  .bg .dark-overlay .container .box-task .box-task-wrapper {
+    height: 96.5vh;
+  }
+}
+
+@media (max-width: 768px) {
+  .bg .dark-overlay .container .box-task .box-task-wrapper {
+    height: 100vh;
   }
 }
 
 @media (max-height: 700px) {
   .bg {
-    height: 200vmax;
+    height: 70vmax;
   }
 }
